style.css
/* ... */
.subtitle{
	text-align: center;
}

@-webkit-keyframes lds-dual-ring {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}

@keyframes lds-dual-ring {
  0% {
    -webkit-transform: rotate(0deg);
            transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
            transform: rotate(360deg);
  }
}


/* end loading screen */

#loading_screen{
	width: 100vw;
	height: 100vh;
	background-color: white;
	
}

#horiz_container{
	display:-webkit-box;
	display: -webkit-flex;
	display:-ms-flexbox;
	display:flex;
	--webkit-flex-wrap: nowrap;
	-ms-flex-wrap: nowrap;
	    flex-wrap: nowrap;
	overflow-x: scroll;
	overflow-y: hidden;
	-webkit-overflow-scrolling: touch;
 &::-webkit-scrollbar {
    display: none;
  }
}

#first_section{
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	display: inline-block;
	background-image: url('./img/newcomb_bg.jpeg');
    background-size: cover;
	background-attachment: fixed;
	/* height: 100%; */
	width: 80%;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
    /* justify-content: flex-end; */
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    z-index: 5;
}

.height_hack{
	height: 100vh;
}

div#second_section{
	position: absolute;
	top:0;
	left:0;
}

#second_section{
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	display: inline-block;
	background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.0)), to(#dfd8c0)),url(./img/newcomb_bg.jpeg);
	background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0), #dfd8c0),url(./img/newcomb_bg.jpeg);
	/* background-image: url('./img/newcomb_bg.jpeg'); */ 
	height: 100vh;
    /*(width: calc(100% - 15px); */
    background-size: cover;
    /* transform: rotateX(180deg); */
    background-attachment: fixed;
    z-index: -1;
    position: fixed;
    width: 100vw;
    overflow-y: hidden;
}

#footer{
    margin-left: 10%;
}

.leader_logo{
	max-width: 100%;
	margin: 0;
}

.brand_id{
	-ms-flex-item-align: center;
	    -ms-grid-row-align: center;
	    align-self: center;
	margin-right: 2%;
	width: 50vw;
}

.green_bar{
	height: 100vh;
	background-color: #129660;
	width: 75px;
	display: inline-block;
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	z-index: 2;
}

.green_bar_post{
	height: 100vh;
	width: 15px;
	background-color: #5eb246;
	display: inline-block;
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	z-index: 2;
}

.swipe_indicator{
    background-color: #60b03a;
    width:50px;
	height:200px;
	/* clip-path: polygon(50% 0%, 100% 50%, 50% 100%); */
	clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 75% 50%);
	-webkit-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 75% 50%);
	/* margin-top: calc(50vh - 100px); */
	margin-right: 20px;
	/*margin-left: calc(100% - 70px);*/
    -ms-flex-item-align: center;
        -ms-grid-row-align: center;
        align-self: center;
    margin-top: calc(50vh - 100px);
	-webkit-transform: translate(20vh,50vh);
	    -ms-transform: translate(20vh,50vh);
	        transform: translate(20vh,50vh);
}

.swipe_buffer{
	opacity: 0.4;
    -webkit-box-flex: 0;
        -ms-flex: 0 0 auto;
            flex: 0 0 auto;
    width: 100vw;
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
}

.second_section_text{
    width: 70%;
    margin-left: 10%;	
}

.fadeInAnim{
	-webkit-animation: fadeIn 2s ease-in both;
	        animation: fadeIn 2s ease-in both;
}



.second_section_caption{
	display: inline-block;
	margin: 0;
}

.second_section_caption > h2{
    display: inline-block;
    margin: 0;
}

.second_section_caption > h3{
	display: inline-block;
    margin: 0;
}

.footer_logo{
	margin-top: 2%;
	width: 80%;
}

@keyframes fadeIn {
	from {
		opacity: 0;
		/* transform: translate3d(0, -20%, 0);*/
		-webkit-transform: translate(0, -20%);
		        transform: translate(0, -20%);
	}
	to {
		opacity: 1;
		/* transform: translate3d(0, 0, 0); */
		-webkit-transform: translate(0, 0);
		        transform: translate(0, 0);
	}
}

@supports (-ms-ime-align:auto) { 
	.swipe_indicator { 
	    background-color: transparent;
	}
}


@media screen and (max-height: 800px){
	#horiz_container, div#second_section, .green_bar, .green_bar_post {
		/* height: 750px; */ 
	}
	.second_section_grid_container{
		height: 100vh;
		display: -ms-grid;
		display: grid;
		    grid-template-areas: 
		"image caption caption gutter"
		"description description footer gutter";
		-ms-grid-columns: 30% 20% 20% 30%;
		grid-template-columns: 30% 20% 20% 30%;
		-ms-grid-rows: 30% 50%;
		grid-template-rows: 30% 50%;
	}

	.second_section_image{
		grid-area: image;
	}

	.second_section_caption{
		grid-area: caption;
		-ms-flex-item-align: center;
		    -ms-grid-row-align: center;
		    align-self: center;
	}

	.second_section_text{
		grid-area: description;    
		font-size: 1.8vw;
		margin-top: 10%;
		width: 80%;
	}
	#footer{
		grid-area: footer;
		margin-left: 0%;
		-webkit-box-align: center;
		    -ms-flex-align: center;
		        align-items: center;
		-ms-flex-item-align: end;
		    -ms-grid-row-align: end;
		    align-self: end;
	}
	.second_section_image>img{
	    max-width: 80%;
	    max-height: 100%;
	}

	.second_section_caption > h2{
		font-size: 2vw;
	}

	div.below_image_container{
		margin-top: 5%;
	}
	img.footer_logo{
		margin-left: 3%;
		margin-top: 10%;
		width: 80%;
		max-width: 100%
	}

}
/* ... */

